# arm64jit

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/jit/: Cargo.toml  build.rs
crates/jit-codegen/: Cargo.toml
crates/jit-codegen/src/: core.rs  lib.rs
crates/jit-core/: Cargo.toml
crates/jit-core/src/: engine.rs  lib.rs  types.rs
crates/jit-macro/: Cargo.toml  build.rs
crates/jit-macro/src/: ast.rs  emit.rs  generated_macro_rules.rs  lib.rs  normalize.rs  parse.rs  rules.rs  shape.rs
crates/jit-spec/: Cargo.toml
crates/jit-spec/src/: lib.rs
crates/jit/spec/: Instructions.min.json  Instructions.source.txt  alias_rules.json
crates/jit/src/: alias.rs  asm.rs  encode.rs  generated_alias_rules.rs  generated_specs.rs  lib.rs  linker.rs
crates/jit/tests/: jit_macro.rs  spec_consistency.rs
examples/: repro_mov_w.rs
examples/fib/: Cargo.toml
examples/fib/src/: main.rs
examples/sve/: Cargo.toml
examples/sve/src/: main.rs
