[workspace]
members = [
  "crates/jit-spec",
  "crates/jit-codegen",
  "crates/jit-core",
  "crates/jit",
  "crates/jit-macro",
  "examples/fib",
  "examples/sve",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.2"
repository = "https://github.com/asLody/arm64jit"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
quote = "1.0"
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full"] }
prettyplease = "0.2"

[profile.min-size]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
