[package]
name = "jit-macro"
version = "0.2.8"
edition.workspace = true
license.workspace = true
description = "jit! macro frontend for arm64jit"
repository = "https://github.com/asLody/arm64jit"
build = false

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
