[package]
name = "arm64jit"
version = "0.3.10"
edition.workspace = true
license.workspace = true
description = "Spec-driven AArch64 JIT assembler for Rust"
repository = "https://github.com/asLody/arm64jit"
build = false
exclude = ["spec/*"]

[features]
default = []

[dependencies]
jit-core = { path = "../jit-core", version = "0.1.4" }
jit-macro = { path = "../jit-macro", version = "0.2.4" }
bytemuck = { version = "1.24", default-features = false }


[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
